force-app/main/default/objects/PromptLibrary__c/PromptLibrary__c.object-meta.xml
<CustomObject>
    <label>Prompt Library</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Prompt Library Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>