force-app/main/default/objects/PromptLibrary__c/fields/ModelName__c.field-meta.xml
<CustomField>
    <fullName>ModelName__c</fullName>
    <label>LLM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EinsteinGPT</fullName>
            </value>
            <value>
                <fullName>OpenAI ChatGPT</fullName>
            </value>
            <value>
                <fullName>AzureGPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>