force-app/main/default/objects/PromptLibrary__c/fields/OutputQuality__c.field-meta.xml
<CustomField>
    <fullName>OutputQuality__c</fullName>
    <label>Output Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>