force-app/main/default/objects/PromptLibrary__c/fields/OutputType__c.field-meta.xml
<CustomField>
    <fullName>OutputType__c</fullName>
    <label>Output Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>VF Page</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>User Story</fullName>
            </value>
            <value>
                <fullName>Dataflow Diagram</fullName>
            </value>
            <value>
                <fullName>Business Requirements Document</fullName>
            </value>
            <value>
                <fullName>High Level Design Document</fullName>
            </value>
            <value>
                <fullName>Component Design Document</fullName>
            </value>
            <value>
                <fullName>Sequence Diagram</fullName>
            </value>
            <value>
                <fullName>Wireframe</fullName>
            </value>
            <value>
                <fullName>Test Plan</fullName>
            </value>
            <value>
                <fullName>Test Class</fullName>
            </value>
            <value>
                <fullName>Test Case</fullName>
            </value>
            <value>
                <fullName>Functional Description</fullName>
            </value>
            <value>
                <fullName>Technical Description</fullName>
            </value>
            <value>
                <fullName>DML Statements</fullName>
            </value>
            <value>
                <fullName>SOQL Statements</fullName>
            </value>
            <value>
                <fullName>Code Quality Assessment</fullName>
            </value>
            <value>
                <fullName>Package XML</fullName>
            </value>
            <value>
                <fullName>Release Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>