force-app/main/default/objects/PromptLibrary__c/fields/PromptComplexity__c.field-meta.xml
<CustomField>
    <fullName>PromptComplexity__c</fullName>
    <label>Prompt Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>