force-app/main/default/objects/PromptLibrary__c/fields/PromptType__c.field-meta.xml
<CustomField>
    <fullName>PromptType__c</fullName>
    <label>Prompt Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software Engineering</fullName>
            </value>
            <value>
                <fullName>Business Capability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>