force-app/main/default/objects/PromptLibrary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prompt__c</columns>
    <columns>PromptType__c</columns>
    <columns>Industry__c</columns>
    <columns>Entity__c</columns>
    <columns>ModelName__c</columns>
    <columns>PromptComplexity__c</columns>
    <columns>OutputQuality__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Gokul Sriram Regu</value>
    </filters>
    <label>All</label>
</ListView>