force-app/main/default/objects/PromptLibrary__c/listViews/All_Field.listView-meta.xml
<ListView>
    <fullName>All_Field</fullName>
    <columns>NAME</columns>
    <columns>Prompt__c</columns>
    <columns>PromptType__c</columns>
    <columns>Industry__c</columns>
    <columns>OutputType__c</columns>
    <columns>Entity__c</columns>
    <columns>ModelName__c</columns>
    <columns>PromptComplexity__c</columns>
    <columns>OutputQuality__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Field</label>
</ListView>