force-app/main/default/objects/PromptLibrary__c/listViews/Business.listView-meta.xml
<ListView>
    <fullName>Business</fullName>
    <columns>NAME</columns>
    <columns>Prompt__c</columns>
    <columns>Industry__c</columns>
    <columns>Entity__c</columns>
    <columns>ModelName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PromptType__c</field>
        <operation>equals</operation>
        <value>Business Capability</value>
    </filters>
    <label>Business</label>
</ListView>