force-app/main/default/objects/PromptLibrary__c/listViews/Soft_Engg.listView-meta.xml
<ListView>
    <fullName>Soft_Engg</fullName>
    <columns>NAME</columns>
    <columns>Prompt__c</columns>
    <columns>OutputType__c</columns>
    <columns>OutputQuality__c</columns>
    <columns>ModelName__c</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PromptType__c</field>
        <operation>equals</operation>
        <value>Software Engineering</value>
    </filters>
    <label>Soft Engg</label>
</ListView>